topconfig set FCOE_FNIC
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13676 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -1745,6 +1745,7 @@ CONFIG_SCSI_ADVANSYS=m
 CONFIG_SCSI_HPTIOP=m
 CONFIG_LIBFC=m
 CONFIG_FCOE=m
+CONFIG_FCOE_FNIC=m
 CONFIG_SCSI_PPA=m
 CONFIG_SCSI_IMM=m
 # CONFIG_SCSI_IZIP_EPP16 is not set
