topconfig disable EVENT_TRACER
default disabled

git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13678 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -2875,6 +2875,7 @@ CONFIG_HIGH_RES_TIMERS=y
 # CONFIG_SYSPROF_TRACER is not set
 # CONFIG_SCHED_TRACER is not set
 # CONFIG_CONTEXT_SWITCH_TRACER is not set
+# CONFIG_EVENT_TRACER is not set
 CONFIG_BOOT_TRACER=y
 # CONFIG_TRACE_BRANCH_PROFILING is not set
 # CONFIG_POWER_TRACER is not set
