--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -2876,6 +2876,7 @@ CONFIG_HIGH_RES_TIMERS=y
 # CONFIG_SCHED_TRACER is not set
 # CONFIG_CONTEXT_SWITCH_TRACER is not set
 # CONFIG_EVENT_TRACER is not set
+# CONFIG_FTRACE_SYSCALLS is not set
 CONFIG_BOOT_TRACER=y
 # CONFIG_TRACE_BRANCH_PROFILING is not set
 # CONFIG_POWER_TRACER is not set
