Enable bnx2x, using firmware-split patches from net-next and mirroring the per-subarch config settings used for bnx2
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13688 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -1269,6 +1269,7 @@ CONFIG_SKY2=m
 CONFIG_VIA_VELOCITY=m
 CONFIG_TIGON3=m
 CONFIG_BNX2=m
+CONFIG_BNX2X=m
 CONFIG_QLA3XXX=m
 CONFIG_ATL1=m
 CONFIG_ATL1E=m
