x86 disable KEXEC_JUMP for now
quite experimental, maybe enabled later.

git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13691 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/kernelarch-x86/config
+++ b/linux-2.6/debian/config/kernelarch-x86/config
@@ -42,6 +42,7 @@ CONFIG_EFI=y
 CONFIG_SECCOMP=y
 # CONFIG_CC_STACKPROTECTOR is not set
 CONFIG_KEXEC=y
+# CONFIG_KEXEC_JUMP is not set
 # CONFIG_CRASH_DUMP is not set
 # CONFIG_RELOCATABLE is not set
 CONFIG_HOTPLUG_CPU=y
