topconfig enable PCI_IOV
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13692 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -1600,6 +1600,7 @@ CONFIG_PARPORT_1284=y
 ##
 CONFIG_PCI_LEGACY=y
 CONFIG_PCI_STUB=m
+CONFIG_PCI_IOV=y
 
 ##
 ## file: drivers/pci/hotplug/Kconfig
