topconfig enable ASYNC_TX_DMA
recommended for raid456 and enabeld in fedora.

git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13693 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -263,6 +263,7 @@ CONFIG_CRYPTO_DEV_HIFN_795X_RNG=y
 ## file: drivers/dma/Kconfig
 ##
 # CONFIG_DMATEST is not set
+CONFIG_ASYNC_TX_DMA=y
 
 ##
 ## file: drivers/edac/Kconfig
