--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -1910,6 +1910,11 @@ CONFIG_STAGING=y
 # CONFIG_USB_ATMEL is not set
 
 ##
+## file: drivers/staging/b3dfg/Kconfig
+##
+# CONFIG_B3DFG is not set
+
+##
 ## file: drivers/staging/comedi/Kconfig
 ##
 # CONFIG_COMEDI is not set
