allow both backing stores for romfs
aka enabling ROMFS_BACKED_BY_BOTH

git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13695 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -2716,6 +2716,11 @@ CONFIG_REISERFS_FS_SECURITY=y
 ## file: fs/romfs/Kconfig
 ##
 CONFIG_ROMFS_FS=m
+## choice: RomFS backing stores
+# CONFIG_ROMFS_BACKED_BY_BLOCK is not set
+# CONFIG_ROMFS_BACKED_BY_MTD is not set
+CONFIG_ROMFS_BACKED_BY_BOTH=y
+## end choice
 
 ##
 ## file: fs/smbfs/Kconfig
