topconfig explicitly unset KMEMTRACE
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13696 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -2894,6 +2894,7 @@ CONFIG_BOOT_TRACER=y
 # CONFIG_TRACE_BRANCH_PROFILING is not set
 # CONFIG_POWER_TRACER is not set
 # CONFIG_STACK_TRACER is not set
+# CONFIG_KMEMTRACE is not set
 # CONFIG_HW_BRANCH_TRACER is not set
 CONFIG_BLK_DEV_IO_TRACE=y
 # CONFIG_FTRACE_STARTUP_TEST is not set
