--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -2895,6 +2895,7 @@ CONFIG_BOOT_TRACER=y
 # CONFIG_POWER_TRACER is not set
 # CONFIG_STACK_TRACER is not set
 # CONFIG_KMEMTRACE is not set
+# CONFIG_WORKQUEUE_TRACER is not set
 # CONFIG_HW_BRANCH_TRACER is not set
 CONFIG_BLK_DEV_IO_TRACE=y
 # CONFIG_FTRACE_STARTUP_TEST is not set
