--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -2978,6 +2978,7 @@ CONFIG_NETFILTER=y
 CONFIG_NETFILTER_ADVANCED=y
 CONFIG_BRIDGE_NETFILTER=y
 CONFIG_NET_PKTGEN=m
+# CONFIG_NET_DROP_MONITOR is not set
 CONFIG_WIRELESS=y
 
 ##
