topconfig explicitly unset DMA_API_DEBUG
defaults to n, performance degradation if enabled..

git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13718 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -2957,6 +2957,7 @@ CONFIG_DEBUG_BUGVERBOSE=y
 CONFIG_SYSCTL_SYSCALL_CHECK=y
 # CONFIG_FIREWIRE_OHCI_REMOTE_DMA is not set
 # CONFIG_DYNAMIC_DEBUG is not set
+# CONFIG_DMA_API_DEBUG is not set
 
 ##
 ## file: lib/Kconfig.kgdb
