--- a/linux-2.6/debian/config/kernelarch-x86/config
+++ b/linux-2.6/debian/config/kernelarch-x86/config
@@ -61,6 +61,7 @@ CONFIG_IA32_AOUT=y
 ##
 ## choice: Processor family
 # CONFIG_MK8 is not set
+# CONFIG_MPSC is not set
 # CONFIG_MCORE2 is not set
 CONFIG_GENERIC_CPU=y
 ## end choice
