--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -2452,6 +2452,7 @@ CONFIG_EXT2_FS_SECURITY=y
 ## file: fs/ext3/Kconfig
 ##
 CONFIG_EXT3_FS=m
+# CONFIG_EXT3_DEFAULTS_TO_ORDERED is not set
 CONFIG_EXT3_FS_XATTR=y
 CONFIG_EXT3_FS_POSIX_ACL=y
 CONFIG_EXT3_FS_SECURITY=y
