debian/sparc/config: Make SPARSEMEM_MANUAL explicit.
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13758 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/sparc/config
+++ b/linux-2.6/debian/config/sparc/config
@@ -268,7 +268,9 @@ CONFIG_SUN_PARTITION=y
 ## file: mm/Kconfig
 ##
 ## choice: Memory model
+# CONFIG_FLATMEM_MANUAL is not set
 # CONFIG_DISCONTIGMEM_MANUAL is not set
+CONFIG_SPARSEMEM_MANUAL=y
 ## end choice
 
 ##
