* debian/changelog: Update. * debian/config/s390/config: Set SPARSEMEM_MANUAL.
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13759 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/s390/config
+++ b/linux-2.6/debian/config/s390/config
@@ -160,9 +160,9 @@ CONFIG_BSD_DISKLABEL=y
 ## file: mm/Kconfig
 ##
 ## choice: Memory model
-CONFIG_FLATMEM_MANUAL=y
+# CONFIG_FLATMEM_MANUAL is not set
 # CONFIG_DISCONTIGMEM_MANUAL is not set
-# CONFIG_SPARSEMEM_MANUAL is not set
+CONFIG_SPARSEMEM_MANUAL=y
 ## end choice
 
 ##
