* debian/changelog: Update. * debian/config/kernelarch-x86/config, debian/config/powerpc/config,   debian/config/sparc/config: Set IPV6 to y.
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13760 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/powerpc/config
+++ b/linux-2.6/debian/config/powerpc/config
@@ -976,6 +976,11 @@ CONFIG_ECONET_AUNUDP=y
 CONFIG_ECONET_NATIVE=y
 
 ##
+## file: net/ipv6/Kconfig
+##
+CONFIG_IPV6=y
+
+##
 ## file: net/ipx/Kconfig
 ##
 CONFIG_IPX=m
