--- a/linux-2.6/debian/config/sparc/config
+++ b/linux-2.6/debian/config/sparc/config
@@ -312,6 +312,11 @@ CONFIG_IP_PNP_RARP=y
 CONFIG_ARPD=y
 
 ##
+## file: net/ipv6/Kconfig
+##
+CONFIG_IPV6=y
+
+##
 ## file: net/ipx/Kconfig
 ##
 CONFIG_IPX=m
