--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -2867,6 +2867,15 @@ CONFIG_HZ_250=y
 ## end choice
 
 ##
+## file: kernel/power/Kconfig
+##
+CONFIG_PM=y
+# CONFIG_PM_DEBUG is not set
+CONFIG_SUSPEND=y
+CONFIG_HIBERNATION=y
+CONFIG_PM_STD_PARTITION=""
+
+##
 ## file: kernel/Kconfig.preempt
 ##
 ## choice: Preemption Model
