debian/config: Centralize CPU Frequency scaling options.
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13773 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/kernelarch-x86/config
+++ b/linux-2.6/debian/config/kernelarch-x86/config
@@ -141,6 +141,16 @@ CONFIG_XEN_BLKDEV_FRONTEND=m
 CONFIG_HVC_XEN=y
 
 ##
+## file: drivers/cpufreq/Kconfig
+##
+## choice: Default CPUFreq governor
+# CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
+CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND=y
+# CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
+## end choice
+
+##
 ## file: drivers/input/Kconfig
 ##
 CONFIG_XEN_KBDDEV_FRONTEND=y
