--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -1339,6 +1339,7 @@ CONFIG_SLIP=m
 CONFIG_SLIP_COMPRESSED=y
 CONFIG_SLIP_SMART=y
 CONFIG_SLIP_MODE_SLIP6=y
+CONFIG_NETCONSOLE=m
 CONFIG_NETCONSOLE_DYNAMIC=y
 CONFIG_VIRTIO_NET=m
 
