* debian/changelog: Update. * debian/config/kernelarch-x86/config: Set RELOCATABLE.
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13794 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/kernelarch-x86/config
+++ b/linux-2.6/debian/config/kernelarch-x86/config
@@ -45,7 +45,7 @@ CONFIG_SECCOMP=y
 CONFIG_KEXEC=y
 # CONFIG_CRASH_DUMP is not set
 # CONFIG_KEXEC_JUMP is not set
-# CONFIG_RELOCATABLE is not set
+CONFIG_RELOCATABLE=y
 CONFIG_HOTPLUG_CPU=y
 # CONFIG_COMPAT_VDSO is not set
 # CONFIG_CMDLINE_BOOL is not set
