* debian/changelog: Update. * debian/templates: Update sections.
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13803 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/templates/control.main.in
+++ b/linux-2.6/debian/templates/control.main.in
@@ -1,7 +1,6 @@
 Package: linux-source-@version@
 Architecture: all
-Section: devel
-Priority: optional
+Section: kernel
 Provides: linux-source, linux-source-@major@
 Depends: binutils, bzip2
 Recommends: libc6-dev | libc-dev, gcc, make
@@ -21,7 +20,6 @@ Description: Linux kernel source for version @version@ with Debian patches
 Package: linux-doc-@version@
 Architecture: all
 Section: doc
-Priority: optional
 Provides: linux-doc-@major@
 Description: Linux kernel specific documentation for version @version@
  This package provides the various README files and HTML documentation for
@@ -34,7 +32,6 @@ Description: Linux kernel specific documentation for version @version@
 Package: linux-manual-@version@
 Architecture: all
 Section: doc
-Priority: optional
 Provides: linux-manual, kernel-manual-@major@
 Conflicts: linux-manual, kernel-manual-@major@
 Replaces: linux-manual, kernel-manual-@major@
@@ -50,8 +47,6 @@ Description: Linux kernel API manual pages for version @version@
 
 Package: linux-patch-debian-@version@
 Architecture: all
-Section: devel
-Priority: optional
 Depends: bzip2, linux-support-@upstreamversion@@abiname@
 Suggests: linux-source-@version@
 Description: Debian patches to version @version@ of the Linux kernel
