--- a/linux-2.6/debian/templates/control.source.in
+++ b/linux-2.6/debian/templates/control.source.in
@@ -1,4 +1,4 @@
-Section: devel
+Section: kernel
 Priority: optional
 Maintainer: Debian Kernel Team <debian-kernel@lists.debian.org>
 Uploaders: Bastian Blank <waldi@debian.org>, Frederik Schüler <fs@debian.org>, maximilian attems <maks@debian.org>
