linux-source reword long desc
fixes lintian warning:
linux-source-2.6.30

    * I using-first-person-in-description
          o line 4: we

git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13842 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/templates/control.main.in
+++ b/linux-2.6/debian/templates/control.main.in
@@ -9,7 +9,7 @@ Description: Linux kernel source for version @version@ with Debian patches
  This package provides source code for the Linux kernel version @version@.
  This source closely tracks official Linux kernel releases.  Debian's
  modifications to that source consist of security fixes, bug fixes, and
- features that have already been (or we believe will be) accepted by the
+ features that have already been (or are believed to be) accepted by the
  upstream maintainers.
  .
  If you wish to use this package to create a custom Linux kernel, then
