linux-tree fix typo in long desc
linux-tree-2.6.30

    * W spelling-error-in-description
          o superseeded superseded

git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13844 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/templates/control.tree.in
+++ b/linux-2.6/debian/templates/control.tree.in
@@ -9,7 +9,7 @@ Description: Linux kernel source tree for building Debian kernel images
  are structured so that a linux-image package's build
  dependencies can always be satisfied, even if the linux-source
  package that had been used to compile the image has been
- superseeded by a newer Debian revision since the last build.
+ superseded by a newer Debian revision since the last build.
  .
  The package provides a list of virtual packages, corresponding to
  Debian revisions of a linux-source package.  The Debian
