topconfig enable modular NETFILTER_XT_MATCH_OSF
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13869 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -3355,6 +3355,7 @@ CONFIG_NETFILTER_XT_MATCH_STRING=m
 CONFIG_NETFILTER_XT_MATCH_TCPMSS=m
 CONFIG_NETFILTER_XT_MATCH_TIME=m
 CONFIG_NETFILTER_XT_MATCH_U32=m
+CONFIG_NETFILTER_XT_MATCH_OSF=m
 
 ##
 ## file: net/netfilter/ipvs/Kconfig
