topconfig enable modular FIREWIRE_NET
juju will clearly be the chosen firewire stack for squeeze.

git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13870 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -298,6 +298,7 @@ CONFIG_EDAC_I5100=m
 CONFIG_FIREWIRE=m
 CONFIG_FIREWIRE_OHCI=m
 CONFIG_FIREWIRE_SBP2=m
+CONFIG_FIREWIRE_NET=m
 
 ##
 ## file: drivers/gpio/Kconfig
