--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -3612,6 +3612,7 @@ CONFIG_SND_ALS300=m
 # CONFIG_SND_AW2 is not set
 CONFIG_SND_OXYGEN=m
 CONFIG_SND_CS5530=m
+CONFIG_SND_CTXFI=m
 CONFIG_SND_DARLA20=m
 CONFIG_SND_GINA20=m
 CONFIG_SND_LAYLA20=m
