--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -2134,6 +2134,8 @@ CONFIG_USB_DEVICE_CLASS=y
 ## file: drivers/usb/host/Kconfig
 ##
 CONFIG_USB_C67X00_HCD=m
+CONFIG_USB_XHCI_HCD=m
+# CONFIG_USB_XHCI_HCD_DEBUGGING is not set
 CONFIG_USB_EHCI_TT_NEWSCHED=y
 # CONFIG_USB_OXU210HP_HCD is not set
 CONFIG_USB_ISP116X_HCD=m
