disable v4l1 ov511 and quickcam_messenger drivers
obsoleted by gspca v4l2 gspca subdrivers

git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13873 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -902,7 +902,7 @@ CONFIG_VIDEO_SH_MOBILE_CEU=m
 CONFIG_V4L_USB_DRIVERS=y
 CONFIG_VIDEO_OVCAMCHIP=m
 CONFIG_USB_W9968CF=m
-CONFIG_USB_OV511=m
+# CONFIG_USB_OV511 is not set
 CONFIG_USB_SE401=m
 CONFIG_USB_STV680=m
 CONFIG_USB_ZR364XX=m
@@ -1052,7 +1052,7 @@ CONFIG_USB_SN9C102=m
 CONFIG_USB_VICAM=m
 CONFIG_USB_IBMCAM=m
 CONFIG_USB_KONICAWC=m
-CONFIG_USB_QUICKCAM_MESSENGER=m
+# CONFIG_USB_QUICKCAM_MESSENGER is not set
 
 ##
 ## file: drivers/media/video/usbvision/Kconfig
