topconfig enable modular IEEE802154
IEEE Std 802.15.4 support.

git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13874 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -3137,6 +3137,11 @@ CONFIG_IP_DCCP_CCID3_RTO=100
 # CONFIG_NET_DSA is not set
 
 ##
+## file: net/ieee802154/Kconfig
+##
+CONFIG_IEEE802154=m
+
+##
 ## file: net/ipv4/Kconfig
 ##
 CONFIG_IP_MULTICAST=y
