topconfig set modular CAN_DEV
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13875 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -1363,6 +1363,7 @@ CONFIG_BE2NET=m
 ## file: drivers/net/can/Kconfig
 ##
 CONFIG_CAN_VCAN=m
+CONFIG_CAN_DEV=m
 # CONFIG_CAN_DEBUG_DEVICES is not set
 
 ##
