--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -1159,6 +1159,7 @@ CONFIG_C2PORT_DURAMAR_2150=m
 CONFIG_EEPROM_AT24=m
 CONFIG_EEPROM_AT25=m
 CONFIG_EEPROM_LEGACY=m
+CONFIG_EEPROM_MAX6875=m
 CONFIG_EEPROM_93CX6=m
 
 ##
