--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -1502,6 +1502,7 @@ CONFIG_LIBERTAS=m
 CONFIG_LIBERTAS_USB=m
 CONFIG_LIBERTAS_CS=m
 CONFIG_LIBERTAS_SDIO=m
+CONFIG_LIBERTAS_SPI=m
 # CONFIG_LIBERTAS_DEBUG is not set
 CONFIG_LIBERTAS_THINFIRM=m
 CONFIG_LIBERTAS_THINFIRM_USB=m
