--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -1368,6 +1368,11 @@ CONFIG_BE2NET=m
 ##
 CONFIG_CAN_VCAN=m
 CONFIG_CAN_DEV=m
+CONFIG_CAN_CALC_BITTIMING=y
+CONFIG_CAN_SJA1000=m
+CONFIG_CAN_SJA1000_PLATFORM=m
+CONFIG_CAN_EMS_PCI=m
+CONFIG_CAN_KVASER_PCI=m
 # CONFIG_CAN_DEBUG_DEVICES is not set
 
 ##
