topconfig explicitly enable MAC80211_DEFAULT_PS
y per default.

git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13899 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -3288,6 +3288,7 @@ CONFIG_LLC2=m
 ## file: net/mac80211/Kconfig
 ##
 CONFIG_MAC80211=m
+CONFIG_MAC80211_DEFAULT_PS=y
 CONFIG_MAC80211_RC_PID=y
 CONFIG_MAC80211_RC_MINSTREL=y
 ## choice: Default rate control algorithm
