topconfig enable modular CB710_CORE
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13900 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -1149,6 +1149,8 @@ CONFIG_SGI_XP=m
 CONFIG_SGI_GRU=m
 # CONFIG_SGI_GRU_DEBUG is not set
 CONFIG_ISL29003=m
+CONFIG_CB710_CORE=m
+# CONFIG_CB710_DEBUG is not set
 
 ##
 ## file: drivers/misc/c2port/Kconfig
