topconfig enable modular RT2800USB
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13902 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -1618,6 +1618,7 @@ CONFIG_RT2500PCI=m
 CONFIG_RT61PCI=m
 CONFIG_RT2500USB=m
 CONFIG_RT73USB=m
+CONFIG_RT2800USB=m
 # CONFIG_RT2X00_DEBUG is not set
 
 ##
