topconfig enable modular USB_NET_INT51X1
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13903 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -1482,6 +1482,7 @@ CONFIG_USB_EPSON2888=y
 CONFIG_USB_KC2190=y
 CONFIG_USB_NET_ZAURUS=m
 CONFIG_USB_HSO=m
+CONFIG_USB_NET_INT51X1=m
 
 ##
 ## file: drivers/net/wan/Kconfig
