topconfig enable modular SND_LX6464ES
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13905 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -3653,6 +3653,7 @@ CONFIG_SND_INDIGOIOX=m
 CONFIG_SND_INDIGODJX=m
 CONFIG_SND_HDSPM=m
 CONFIG_SND_HIFIER=m
+CONFIG_SND_LX6464ES=m
 CONFIG_SND_PCXHR=m
 CONFIG_SND_RIPTIDE=m
 CONFIG_SND_VIRTUOSO=m
