topconfig set modular SCSI_BNX2_ISCSI
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13914 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -1834,6 +1834,11 @@ CONFIG_SCSI_AIC94XX=m
 # CONFIG_AIC94XX_DEBUG is not set
 
 ##
+## file: drivers/scsi/bnx2i/Kconfig
+##
+CONFIG_SCSI_BNX2_ISCSI=m
+
+##
 ## file: drivers/scsi/cxgb3i/Kconfig
 ##
 CONFIG_SCSI_CXGB3_ISCSI=m
