topconfig set modular IWM
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13916 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -1597,6 +1597,12 @@ CONFIG_IWL3945=m
 CONFIG_IWL3945_SPECTRUM_MEASUREMENT=y
 
 ##
+## file: drivers/net/wireless/iwmc3200wifi/Kconfig
+##
+CONFIG_IWM=m
+# CONFIG_IWM_DEBUG is not set
+
+##
 ## file: drivers/net/wireless/orinoco/Kconfig
 ##
 CONFIG_HERMES_CACHE_FW_ON_INIT=y
