topconfig set modular IEEE802154_DRIVERS and friend
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13917 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -384,6 +384,12 @@ CONFIG_SENSORS_APPLESMC=m
 ##
 ## file: drivers/i2c/Kconfig
 ##
+CONFIG_IEEE802154_DRIVERS=m
+CONFIG_IEEE802154_FAKEHARD=m
+
+##
+## file: drivers/i2c/Kconfig
+##
 CONFIG_I2C_HELPER_AUTO=y
 
 ##
