topconfig set modular TOUCHSCREEN_W90X900
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13919 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -605,6 +605,7 @@ CONFIG_TOUCHSCREEN_USB_DMC_TSC10=y
 CONFIG_TOUCHSCREEN_USB_IRTOUCH=y
 CONFIG_TOUCHSCREEN_TOUCHIT213=m
 CONFIG_TOUCHSCREEN_TSC2007=m
+CONFIG_TOUCHSCREEN_W90X900=m
 
 ##
 ## file: drivers/isdn/capi/Kconfig
