--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -370,6 +370,7 @@ CONFIG_SENSORS_DME1737=m
 CONFIG_SENSORS_SMSC47M192=m
 CONFIG_SENSORS_ADS7828=m
 CONFIG_SENSORS_THMC50=m
+CONFIG_SENSORS_TMP401=m
 CONFIG_SENSORS_VT1211=m
 CONFIG_SENSORS_VT8231=m
 CONFIG_SENSORS_W83791D=m
