--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -1719,6 +1719,7 @@ CONFIG_REGULATOR_FIXED_VOLTAGE=m
 # CONFIG_REGULATOR_VIRTUAL_CONSUMER is not set
 CONFIG_REGULATOR_USERSPACE_CONSUMER=m
 CONFIG_REGULATOR_BQ24022=m
+CONFIG_REGULATOR_MAX1586=m
 CONFIG_REGULATOR_WM8350=m
 CONFIG_REGULATOR_WM8400=m
 CONFIG_REGULATOR_PCF50633=m
