topconfig set modular REGULATOR_LP3971
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13924 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -1723,6 +1723,7 @@ CONFIG_REGULATOR_MAX1586=m
 CONFIG_REGULATOR_WM8350=m
 CONFIG_REGULATOR_WM8400=m
 CONFIG_REGULATOR_PCF50633=m
+CONFIG_REGULATOR_LP3971=m
 
 ##
 ## file: drivers/rtc/Kconfig
