topconfig set MEDIA_SUPPORT
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13925 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -691,6 +691,7 @@ CONFIG_DM_UEVENT=y
 ##
 ## file: drivers/media/Kconfig
 ##
+CONFIG_MEDIA_SUPPORT=m
 CONFIG_VIDEO_DEV=m
 CONFIG_VIDEO_ALLOW_V4L1=y
 CONFIG_VIDEO_V4L1_COMPAT=y
