--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -2715,6 +2715,11 @@ CONFIG_NLS_KOI8_U=m
 CONFIG_NLS_UTF8=m
 
 ##
+## file: fs/notify/Kconfig
+##
+CONFIG_FSNOTIFY=y
+
+##
 ## file: fs/notify/dnotify/Kconfig
 ##
 CONFIG_DNOTIFY=y
