topconfig set modular CUSE
enables fuse extension

git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13927 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -2393,6 +2393,7 @@ CONFIG_SBC_EPX_C3_WATCHDOG=m
 ##
 CONFIG_TMPFS=y
 CONFIG_TMPFS_POSIX_ACL=y
+CONFIG_CUSE=m
 CONFIG_HUGETLBFS=y
 CONFIG_MISC_FILESYSTEMS=y
 CONFIG_NILFS2_FS=m
