Add firmware-linux-free package containing DFSG-free firmware. Make kernel image packages recommend it.
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13934 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/templates/control.main.in
+++ b/linux-2.6/debian/templates/control.main.in
@@ -57,3 +57,13 @@ Description: Debian patches to version @version@ of the Linux kernel
  Note that these patches do NOT apply against a pristine
  Linux @version@ kernel but only against the kernel tarball
  linux-@major@_@source_upstream@.orig.tar.gz from the Debian archive.
+
+Package: firmware-linux-free
+Architecture: all
+Description: Binary firmware for various drivers in the Linux kernel
+ This package contains firmware which was previously included in the
+ Linux kernel and which is compliant with the Debian Free Software
+ Guidelines.
+ .
+ Most firmware previously included in the Linux kernel is non-free
+ and has been moved to the firmware-linux-nonfree package.
