--- a/linux-2.6/debian/templates/control.image.type-plain.in
+++ b/linux-2.6/debian/templates/control.image.type-plain.in
@@ -2,6 +2,7 @@ Package: linux-image-@upstreamversion@@abiname@@localversion@
 Provides: linux-image, linux-image-@major@, linux-modules-@upstreamversion@@abiname@@localversion@
 Pre-Depends: debconf | debconf-2.0
 Depends: module-init-tools, ${shlibs:Depends}
+Recommends: firmware-linux-free (>= @source_upstream@)
 Suggests: linux-doc-@version@
 Description: Linux @upstreamversion@ image on @class@
  This package provides the binary image and pre-built loadable modules for
