topconfig set modular WL12XX
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13938 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -1640,6 +1640,11 @@ CONFIG_RT2800USB=m
 # CONFIG_RT2X00_DEBUG is not set
 
 ##
+## file: drivers/net/wireless/wl12xx/Kconfig
+##
+CONFIG_WL12XX=m
+
+##
 ## file: drivers/net/wireless/zd1211rw/Kconfig
 ##
 CONFIG_ZD1211RW=m
