topconfig enable modular PPS
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13939 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -1717,6 +1717,12 @@ CONFIG_BATTERY_MAX17040=m
 CONFIG_CHARGER_PCF50633=m
 
 ##
+## file: drivers/pps/Kconfig
+##
+CONFIG_PPS=m
+# CONFIG_PPS_DEBUG is not set
+
+##
 ## file: drivers/regulator/Kconfig
 ##
 CONFIG_REGULATOR=y
