--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -1146,6 +1146,7 @@ CONFIG_MFD_WM8350_I2C=m
 CONFIG_MFD_PCF50633=m
 CONFIG_PCF50633_ADC=m
 CONFIG_PCF50633_GPIO=m
+CONFIG_AB3100_CORE=m
 
 ##
 ## file: drivers/misc/Kconfig
