--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -1197,10 +1197,13 @@ CONFIG_SDIO_UART=m
 CONFIG_MMC_SDHCI=m
 CONFIG_MMC_SDHCI_PCI=m
 CONFIG_MMC_RICOH_MMC=m
+CONFIG_MMC_SDHCI_PLTFM=m
 CONFIG_MMC_WBSD=m
 CONFIG_MMC_TIFM_SD=m
 CONFIG_MMC_SPI=m
 CONFIG_MMC_SDRICOH_CS=m
+CONFIG_MMC_CB710=m
+CONFIG_MMC_VIA_SDMMC=m
 
 ##
 ## file: drivers/mtd/Kconfig
