topconfig enable modular LEDS_LP3944
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13943 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -651,6 +651,7 @@ CONFIG_LEDS_CLASS=m
 CONFIG_LEDS_NET48XX=m
 CONFIG_LEDS_ALIX2=m
 CONFIG_LEDS_PCA9532=m
+CONFIG_LEDS_LP3944=m
 CONFIG_LEDS_LP5521=m
 CONFIG_LEDS_PCA955X=m
 CONFIG_LEDS_WM8350=m
