--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -1768,6 +1768,7 @@ CONFIG_RTC_DRV_M41T80=m
 CONFIG_RTC_DRV_S35390A=m
 CONFIG_RTC_DRV_FM3130=m
 CONFIG_RTC_DRV_RX8581=m
+CONFIG_RTC_DRV_RX8025=m
 CONFIG_RTC_DRV_M41T94=m
 CONFIG_RTC_DRV_DS1305=m
 CONFIG_RTC_DRV_DS1390=m
