topconfig explicitly disable GCOV_KERNEL
defaults to no, kernel profiling not a user fun ;)

git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13946 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -2963,6 +2963,11 @@ CONFIG_HZ_250=y
 ## end choice
 
 ##
+## file: kernel/gcov/Kconfig
+##
+# CONFIG_GCOV_KERNEL is not set
+
+##
 ## file: kernel/power/Kconfig
 ##
 CONFIG_PM=y
