--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -313,6 +313,11 @@ CONFIG_DRM_VIA=m
 CONFIG_DRM_SAVAGE=m
 
 ##
+## file: drivers/gpu/drm/radeon/Kconfig
+##
+# CONFIG_DRM_RADEON_KMS is not set
+
+##
 ## file: drivers/hid/Kconfig
 ##
 CONFIG_HID_SUPPORT=y
