--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -2683,6 +2683,7 @@ CONFIG_NFS_FS=m
 CONFIG_NFS_V3=y
 CONFIG_NFS_V3_ACL=y
 CONFIG_NFS_V4=y
+# CONFIG_NFS_V4_1 is not set
 CONFIG_NFS_FSCACHE=y
 
 ##
