x86 centralize HW_RANDOM
as bonus side effects enables now also HW_RANDOM_VIA,
which got 64 bit clean.

git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13950 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/kernelarch-x86/config
+++ b/linux-2.6/debian/config/kernelarch-x86/config
@@ -109,6 +109,15 @@ CONFIG_XEN=y
 # CONFIG_XEN_DEBUG_FS is not set
 
 ##
+## file: drivers/char/hw_random/Kconfig
+##
+CONFIG_HW_RANDOM=m
+CONFIG_HW_RANDOM_INTEL=m
+CONFIG_HW_RANDOM_AMD=m
+CONFIG_HW_RANDOM_VIA=m
+CONFIG_HW_RANDOM_GEODE=m
+
+##
 ## file: drivers/acpi/Kconfig
 ##
 CONFIG_ACPI=y
