fix DRAGONRISE_FF and  GREENASIA_FF selection
.config:227:warning: symbol value 'm' invalid for DRAGONRISE_FF
.config:231:warning: symbol value 'm' invalid for GREENASIA_FF

git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13951 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -324,11 +324,11 @@ CONFIG_HID_SUPPORT=y
 CONFIG_HID=m
 # CONFIG_HID_DEBUG is not set
 CONFIG_HIDRAW=y
-CONFIG_DRAGONRISE_FF=m
+CONFIG_DRAGONRISE_FF=y
 CONFIG_LOGITECH_FF=y
 CONFIG_LOGIRUMBLEPAD2_FF=y
 CONFIG_PANTHERLORD_FF=y
-CONFIG_GREENASIA_FF=m
+CONFIG_GREENASIA_FF=y
 CONFIG_THRUSTMASTER_FF=y
 CONFIG_ZEROPLUS_FF=y
 
