topconfig enable new SMARTJOYPLUS_FF
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13952 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -329,6 +329,7 @@ CONFIG_LOGITECH_FF=y
 CONFIG_LOGIRUMBLEPAD2_FF=y
 CONFIG_PANTHERLORD_FF=y
 CONFIG_GREENASIA_FF=y
+CONFIG_SMARTJOYPLUS_FF=y
 CONFIG_THRUSTMASTER_FF=y
 CONFIG_ZEROPLUS_FF=y
 
