--- a/linux-2.6/debian/config/kernelarch-x86/config
+++ b/linux-2.6/debian/config/kernelarch-x86/config
@@ -314,6 +314,11 @@ CONFIG_RT2860=m
 CONFIG_RT2870=m
 
 ##
+## file: drivers/staging/rt3070/Kconfig
+##
+CONFIG_RT3070=m
+
+##
 ## file: drivers/staging/rtl8187se/Kconfig
 ##
 CONFIG_RTL8187SE=m
