x86 enable COMEDI_PCMCIA_DRIVERS
centralize the comedi staging setting.

git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13964 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/kernelarch-x86/config
+++ b/linux-2.6/debian/config/kernelarch-x86/config
@@ -213,7 +213,11 @@ CONFIG_STAGING=y
 ##
 ## file: drivers/staging/comedi/Kconfig
 ##
-# CONFIG_COMEDI is not set
+CONFIG_COMEDI=m
+# CONFIG_COMEDI_DEBUG is not set
+CONFIG_COMEDI_PCI_DRIVERS=m
+CONFIG_COMEDI_PCMCIA_DRIVERS=m
+CONFIG_COMEDI_USB_DRIVERS=m
 
 ##
 ## file: drivers/staging/dst/Kconfig
