x86 explicitly disable IOMMU_STRESS
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13968 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/kernelarch-x86/config
+++ b/linux-2.6/debian/config/kernelarch-x86/config
@@ -76,6 +76,7 @@ CONFIG_DEBUG_RODATA=y
 # CONFIG_DEBUG_RODATA_TEST is not set
 # CONFIG_DEBUG_NX_TEST is not set
 # CONFIG_IOMMU_DEBUG is not set
+# CONFIG_IOMMU_STRESS is not set
 ## choice: IO delay type
 CONFIG_IO_DELAY_0X80=y
 # CONFIG_IO_DELAY_0XED is not set
