--- a/linux-2.6/debian/config/kernelarch-x86/config
+++ b/linux-2.6/debian/config/kernelarch-x86/config
@@ -170,6 +170,7 @@ CONFIG_EDAC=y
 CONFIG_EDAC_MM_EDAC=m
 CONFIG_EDAC_AMD64=m
 CONFIG_EDAC_AMD76X=m
+# CONFIG_EDAC_AMD64_ERROR_INJECTION is not set
 CONFIG_EDAC_E7XXX=m
 CONFIG_EDAC_E752X=m
 CONFIG_EDAC_I82875P=m
