topconfig enable modular USB_CDC_PHONET
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13999 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -1505,6 +1505,7 @@ CONFIG_USB_KC2190=y
 CONFIG_USB_NET_ZAURUS=m
 CONFIG_USB_HSO=m
 CONFIG_USB_NET_INT51X1=m
+CONFIG_USB_CDC_PHONET=m
 
 ##
 ## file: drivers/net/wan/Kconfig
