--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -202,7 +202,7 @@ CONFIG_BT_HCIUART_LL=y
 ## file: drivers/char/Kconfig
 ##
 # CONFIG_VT_HW_CONSOLE_BINDING is not set
-CONFIG_DEVKMEM=y
+# CONFIG_DEVKMEM is not set
 CONFIG_COMPUTONE=m
 CONFIG_MOXA_SMARTIO=m
 CONFIG_SYNCLINK_GT=m
