x86 set DEFAULT_MMAP_MIN_ADDR=65536
value is helpful stopping "NULL dereference" attacks,
arm wants a 32k here.

git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14071 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/kernelarch-x86/config
+++ b/linux-2.6/debian/config/kernelarch-x86/config
@@ -423,6 +423,11 @@ CONFIG_XENFS=m
 CONFIG_XEN_COMPAT_XENFS=y
 
 ##
+## file: mm/Kconfig
+##
+CONFIG_DEFAULT_MMAP_MIN_ADDR=65536
+
+##
 ## file: net/ipv6/Kconfig
 ##
 CONFIG_IPV6=y
