--- a/linux-2.6/debian/config/kernelarch-x86/config
+++ b/linux-2.6/debian/config/kernelarch-x86/config
@@ -419,6 +419,7 @@ CONFIG_XEN_FBDEV_FRONTEND=y
 ##
 CONFIG_XEN_BALLOON=y
 CONFIG_XEN_SCRUB_PAGES=y
+CONFIG_XEN_DEV_EVTCHN=m
 CONFIG_XENFS=m
 CONFIG_XEN_COMPAT_XENFS=y
 
