--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -563,6 +563,7 @@ CONFIG_KEYBOARD_STOWAWAY=m
 ##
 ## file: drivers/input/misc/Kconfig
 ##
+# CONFIG_INPUT_PCSPKR is not set
 CONFIG_INPUT_ATI_REMOTE=m
 CONFIG_INPUT_ATI_REMOTE2=m
 CONFIG_INPUT_KEYSPAN_REMOTE=m
