[ia64] Stop disabling CONFIG_HOTPLUG_CPU, which was blocking CONFIG_KEXEC from being enabled
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14082 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/ia64/config
+++ b/linux-2.6/debian/config/ia64/config
@@ -15,6 +15,7 @@ CONFIG_IA64_MCA_RECOVERY=m
 CONFIG_PERFMON=y
 CONFIG_IA64_PALINFO=m
 CONFIG_KEXEC=y
+CONFIG_HOTPLUG_CPU=y
 CONFIG_CRASH_DUMP=y
 
 ##
