--- a/linux-2.6/debian/config/alpha/config
+++ b/linux-2.6/debian/config/alpha/config
@@ -350,6 +350,7 @@ CONFIG_KEYBOARD_NEWTON=m
 ## file: drivers/input/misc/Kconfig
 ##
 CONFIG_INPUT_MISC=y
+CONFIG_INPUT_PCSPKR=m
 CONFIG_INPUT_UINPUT=m
 
 ##
