--- a/linux-2.6/debian/config/powerpc/config
+++ b/linux-2.6/debian/config/powerpc/config
@@ -330,6 +330,7 @@ CONFIG_KEYBOARD_ATKBD=m
 ## file: drivers/input/misc/Kconfig
 ##
 CONFIG_INPUT_MISC=y
+CONFIG_INPUT_PCSPKR=m
 CONFIG_INPUT_UINPUT=m
 
 ##
