ppc, sparc: enable EFI_PARTITION
leave it disabled for now on s390 and alpha.

git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14092 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/powerpc/config
+++ b/linux-2.6/debian/config/powerpc/config
@@ -895,7 +895,7 @@ CONFIG_MAC_PARTITION=y
 # CONFIG_SGI_PARTITION is not set
 # CONFIG_ULTRIX_PARTITION is not set
 # CONFIG_SUN_PARTITION is not set
-# CONFIG_EFI_PARTITION is not set
+CONFIG_EFI_PARTITION=y
 
 ##
 ## file: net/atm/Kconfig
