--- a/linux-2.6/debian/config/sparc/config
+++ b/linux-2.6/debian/config/sparc/config
@@ -255,7 +255,7 @@ CONFIG_EXT2_FS=y
 # CONFIG_SGI_PARTITION is not set
 # CONFIG_ULTRIX_PARTITION is not set
 CONFIG_SUN_PARTITION=y
-# CONFIG_EFI_PARTITION is not set
+CONFIG_EFI_PARTITION=y
 
 ##
 ## file: mm/Kconfig
