x86 enable PERF_COUNTERS
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14093 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/kernelarch-x86/config
+++ b/linux-2.6/debian/config/kernelarch-x86/config
@@ -420,6 +420,11 @@ CONFIG_XEN_COMPAT_XENFS=y
 CONFIG_XEN_SYS_HYPERVISOR=y
 
 ##
+## file: init/Kconfig
+##
+CONFIG_PERF_COUNTERS=y
+
+##
 ## file: mm/Kconfig
 ##
 CONFIG_DEFAULT_MMAP_MIN_ADDR=65536
