--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -3420,6 +3420,7 @@ CONFIG_WIMAX_DEBUG_LEVEL=8
 ##
 CONFIG_CFG80211=m
 # CONFIG_CFG80211_REG_DEBUG is not set
+# CONFIG_CFG80211_DEBUGFS is not set
 CONFIG_WIRELESS_OLD_REGULATORY=y
 CONFIG_WIRELESS_EXT=y
 # CONFIG_WIRELESS_EXT_SYSFS is not set
