--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -575,6 +575,7 @@ CONFIG_INPUT_PCF50633_PMU=m
 ## file: drivers/input/mouse/Kconfig
 ##
 CONFIG_MOUSE_PS2_ALPS=y
+CONFIG_MOUSE_SYNAPTICS_I2C=m
 # CONFIG_MOUSE_PS2_ELANTECH is not set
 # CONFIG_MOUSE_PS2_TOUCHKIT is not set
 
