--- a/linux-2.6/debian/config/kernelarch-x86/config
+++ b/linux-2.6/debian/config/kernelarch-x86/config
@@ -262,6 +262,11 @@ CONFIG_COMEDI_PCMCIA_DRIVERS=m
 CONFIG_COMEDI_USB_DRIVERS=m
 
 ##
+## file: drivers/staging/cpc-usb/Kconfig
+##
+# CONFIG_USB_CPC is not set
+
+##
 ## file: drivers/staging/dst/Kconfig
 ##
 # CONFIG_DST is not set
@@ -333,6 +338,11 @@ CONFIG_ET131X=m
 # CONFIG_PANEL is not set
 
 ##
+## file: drivers/staging/pata_rdc/Kconfig
+##
+# CONFIG_RDC_17F3101X is not set
+
+##
 ## file: drivers/staging/phison/Kconfig
 ##
 # CONFIG_IDE_PHISON is not set
@@ -388,6 +398,11 @@ CONFIG_RTL8187SE=m
 ## file: drivers/staging/sxg/Kconfig
 ##
 # CONFIG_SXG is not set
+
+##
+## file: drivers/staging/udlfb/Kconfig
+##
+# CONFIG_FB_UDL is not set
 
 ##
 ## file: drivers/staging/usbip/Kconfig
