topconfig disable old USB_DEVICE_CLASS
needed for persistent dev naming for udev.
nuked dup definitions.

git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14133 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -2011,7 +2011,7 @@ CONFIG_USB_TMC=m
 ## file: drivers/usb/core/Kconfig
 ##
 CONFIG_USB_ANNOUNCE_NEW_DEVICES=y
-CONFIG_USB_DEVICE_CLASS=y
+# CONFIG_USB_DEVICE_CLASS is not set
 
 ##
 ## file: drivers/usb/gadget/Kconfig
