topconfig enable modular PCIEAER_INJECT
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14134 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -1695,6 +1695,11 @@ CONFIG_HOTPLUG_PCI_CPCI=y
 # CONFIG_PCIEASPM is not set
 
 ##
+## file: drivers/pci/pcie/aer/Kconfig.debug
+##
+CONFIG_PCIEAER_INJECT=m
+
+##
 ## file: drivers/pcmcia/Kconfig
 ##
 CONFIG_PCMCIA_LOAD_CIS=y
