--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -1476,6 +1476,7 @@ CONFIG_ABYSS=m
 ##
 ## file: drivers/net/tulip/Kconfig
 ##
+CONFIG_DE2104X_DSL=0
 CONFIG_TULIP_NAPI=y
 CONFIG_TULIP_NAPI_HW_MITIGATION=y
 CONFIG_ULI526X=m
