explicitly unset staging vendor VT6655
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14136 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/kernelarch-x86/config
+++ b/linux-2.6/debian/config/kernelarch-x86/config
@@ -410,6 +410,11 @@ CONFIG_RTL8187SE=m
 # CONFIG_USB_IP_COMMON is not set
 
 ##
+## file: drivers/staging/vt6655/Kconfig
+##
+# CONFIG_VT6655 is not set
+
+##
 ## file: drivers/staging/winbond/Kconfig
 ##
 # CONFIG_W35UND is not set
