[hppa] Disable CONFIG_AB3100_CORE, it fails to build
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14158 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/hppa/config
+++ b/linux-2.6/debian/config/hppa/config
@@ -216,6 +216,11 @@ CONFIG_I2O_PROC=m
 # CONFIG_MMC is not set
 
 ##
+## file: drivers/mfd/Kconfig
+##
+# CONFIG_AB3100_CORE is not set
+
+##
 ## file: drivers/mtd/Kconfig
 ##
 # CONFIG_MTD is not set
