* Add Vcs-Svn and Vcs-Browser stanzas pointing to the SVN branch   used for development in unstable. There are other branches   used for experimental (trunk), oldstable and stable, but Vcs-*   doesn't yet provide the ability to distinguish branches in a   more fine-grained manner. (Closes: #471495)
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14159 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/templates/control.source.in
+++ b/linux-2.6/debian/templates/control.source.in
@@ -5,4 +5,6 @@ Uploaders: Bastian Blank <waldi@debian.org>, Frederik Schüler <fs@debian.org>, 
 Standards-Version: 3.8.2
 Build-Depends: debhelper (>> 7), cpio, module-init-tools, python
 Build-Depends-Indep: bzip2, python-central, xmlto
+Vcs-Svn: svn://svn.debian.org/svn/kernel/dists/sid/linux-2.6/
+Vcs-Browser: http://svn.debian.org/wsvn/kernel/dists/sid/linux-2.6/?op=log
 XS-Python-Version: current
