debian/rules: Disallow all rules to run parallel.
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14194 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/rules
+++ b/linux-2.6/debian/rules
@@ -11,6 +11,8 @@ include debian/rules.defs
 
 stamp = [ -d $(dir $@) ] || mkdir $(dir $@); touch $@
 
+.NOTPARALLEL:
+
 source: debian/control $(STAMPS_DIR)/source-base
 $(STAMPS_DIR)/source-base:
 	dh_testdir
