--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -184,7 +184,7 @@ CONFIG_BLK_DEV_LOOP=m
 CONFIG_BLK_DEV_CRYPTOLOOP=m
 CONFIG_BLK_DEV_NBD=m
 CONFIG_BLK_DEV_OSD=m
-CONFIG_BLK_DEV_RAM=y
+CONFIG_BLK_DEV_RAM=m
 CONFIG_BLK_DEV_RAM_COUNT=16
 # CONFIG_BLK_DEV_XIP is not set
 CONFIG_ATA_OVER_ETH=m
