disable CONSOLE_PROM
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14250 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/sparc/config
+++ b/linux-2.6/debian/config/sparc/config
@@ -211,7 +211,7 @@ CONFIG_FB_CG6=y
 ##
 ## file: drivers/video/console/Kconfig
 ##
-CONFIG_PROM_CONSOLE=y
+CONFIG_PROM_CONSOLE=n
 CONFIG_FRAMEBUFFER_CONSOLE=y
 # CONFIG_FONTS is not set
 CONFIG_FONT_SUN8x16=y
