--- a/linux-modules-extra-2.6/debian/templates/control.source.in
+++ b/linux-modules-extra-2.6/debian/templates/control.source.in
@@ -2,7 +2,7 @@ Source: linux-modules-extra-@major@
 Section: kernel
 Priority: optional
 Maintainer: Debian Kernel Team <debian-kernel@lists.debian.org>
-Uploaders: Bastian Blank <waldi@debian.org>, Daniel Baumann <daniel@debian.org>
+Uploaders: Bastian Blank <waldi@debian.org>
 Build-Depends: debhelper (>= 7)
 Standards-Version: 3.8.3
 Vcs-Browser: http://svn.debian.org/wsvn/kernel/dists/trunk/linux-modules-extra-2.6/
