topconfig enable PREEMPT_VOLUNTARY
everyone ships it and enables it.
the !preempt pathes seem the buggy these days.

git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14296 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -2815,8 +2815,8 @@ CONFIG_PM_STD_PARTITION=""
 ## file: kernel/Kconfig.preempt
 ##
 ## choice: Preemption Model
-CONFIG_PREEMPT_NONE=y
-# CONFIG_PREEMPT_VOLUNTARY is not set
+# CONFIG_PREEMPT_NONE is not set
+CONFIG_PREEMPT_VOLUNTARY=y
 # CONFIG_PREEMPT is not set
 ## end choice
 
