[armel] Enable BPQETHER (on the request of Iain Young) and some other AX25 drivers.
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14304 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/armel/config
+++ b/linux-2.6/debian/config/armel/config
@@ -62,3 +62,13 @@ CONFIG_OABI_COMPAT=y
 CONFIG_ECONET_AUNUDP=y
 CONFIG_ECONET_NATIVE=y
 
+##
+## file: drivers/net/hamradio/Kconfig
+##
+CONFIG_BPQETHER=m
+CONFIG_BAYCOM_SER_FDX=m
+CONFIG_BAYCOM_SER_HDX=m
+CONFIG_BAYCOM_PAR=m
+CONFIG_BAYCOM_EPP=m
+CONFIG_YAM=m
+
