centralize hamradio drivers
just keep the isa ones from the topconfig..

git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14305 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -1408,6 +1408,12 @@ CONFIG_CAN_KVASER_PCI=m
 ##
 CONFIG_MKISS=m
 CONFIG_6PACK=m
+CONFIG_BPQETHER=m
+CONFIG_BAYCOM_SER_FDX=m
+CONFIG_BAYCOM_SER_HDX=m
+CONFIG_BAYCOM_PAR=m
+CONFIG_BAYCOM_EPP=m
+CONFIG_YAM=m
 
 ##
 ## file: drivers/net/irda/Kconfig
