Improve package descriptions - Clarify the differences between i386 flavours (Closes: #414690) - Simplify wording of the description template
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@14342 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/templates/control.image.type-kernel-package.in
+++ b/linux-2.6/debian/templates/control.image.type-kernel-package.in
@@ -3,6 +3,5 @@ Provides: linux-image, linux-image-@major@, linux-modules-@upstreamversion@@abin
 Pre-Depends: debconf | debconf-2.0
 Depends: module-init-tools
 Suggests: linux-doc-@version@
-Description: Linux @upstreamversion@ image on @class@
- This package provides the binary image and pre-built loadable modules for
- Linux kernel @upstreamversion@ on @longclass@ machines.
+Description: Linux @upstreamversion@ for @class@
+ The Linux kernel @upstreamversion@ and modules for use on @longclass@.
