--- a/linux-2.6/debian/templates/control.image.type-modulesextra.in
+++ b/linux-2.6/debian/templates/control.image.type-modulesextra.in
@@ -2,12 +2,10 @@ Package: linux-image-@upstreamversion@@abiname@@localversion@
 Provides: linux-image, linux-image-@major@
 Depends: linux-modules-@upstreamversion@@abiname@@localversion@ (= ${binary:Version})
 Suggests: linux-doc-@version@
-Description: Linux @upstreamversion@ image on @class@
- This package provides the binary image for
- Linux kernel @upstreamversion@ on @longclass@ machines.
+Description: Linux @upstreamversion@ for @class@
+ The Linux kernel @upstreamversion@ for use on @longclass@.
 
 Package: linux-modules-@upstreamversion@@abiname@@localversion@
 Depends: module-init-tools
-Description: Linux @upstreamversion@ modules on @class@
- This package provides pre-built loadable modules for
- Linux kernel @version@ on @longclass@ machines.
+Description: Linux @upstreamversion@ modules for @class@
+ Modules for Linux kernel @upstreamversion@ for use on @longclass@.
