--- a/linux-2.6/debian/templates/control.image.type-standalone.in
+++ b/linux-2.6/debian/templates/control.image.type-standalone.in
@@ -2,6 +2,5 @@ Package: linux-image-@upstreamversion@@abiname@@localversion@
 Provides: linux-image, linux-image-@major@
 Suggests: linux-doc-@version@
 Depends: ${shlibs:Depends}
-Description: Linux @upstreamversion@ image on @class@
- This package provides the binary image for
- Linux kernel @upstreamversion@ on @longclass@ machines.
+Description: Linux @upstreamversion@ for @class@
+ The Linux kernel @upstreamversion@ for use on @longclass@.
