--- a/linux-2.6/debian/templates/control.image.type-modulesinline.in
+++ b/linux-2.6/debian/templates/control.image.type-modulesinline.in
@@ -2,6 +2,5 @@ Package: linux-image-@upstreamversion@@abiname@@localversion@
 Provides: linux-image, linux-image-@major@, linux-modules-@upstreamversion@@abiname@@localversion@
 Depends: module-init-tools
 Suggests: linux-doc-@version@
-Description: Linux @upstreamversion@ image on @class@
- This package provides the binary image and pre-built loadable modules for
- Linux kernel @upstreamversion@ on @longclass@ machines.
+Description: Linux @upstreamversion@ for @class@
+ The Linux kernel @upstreamversion@ for use on @longclass@.
