--- a/linux-2.6/debian/templates/control.image.type-plain.in
+++ b/linux-2.6/debian/templates/control.image.type-plain.in
@@ -4,6 +4,5 @@ Pre-Depends: debconf | debconf-2.0
 Depends: module-init-tools, ${shlibs:Depends}
 Recommends: firmware-linux-free (>= @source_upstream@)
 Suggests: linux-doc-@version@
-Description: Linux @upstreamversion@ image on @class@
- This package provides the binary image and pre-built loadable modules for
- Linux kernel @upstreamversion@ on @longclass@ machines.
+Description: Linux @upstreamversion@ for @class@
+ The Linux kernel @upstreamversion@ and modules for use on @longclass@.
